--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 -i https://pypi.org/simple
 aniso8601==7.0.0
 asgiref==3.2.10
+django-cors-headers==3.5.0
 django==3.1.1
 graphene-django==2.13.0
 graphene==2.1.8
