--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
 -i https://pypi.org/simple
-aniso8601==7.0.0
-asgiref==3.2.10
-django-cors-headers==3.5.0
-django==3.1.1
-graphene-django==2.13.0
-graphene==2.1.8
-graphql-core==2.3.2
-graphql-relay==2.0.1
-promise==2.3
-pytz==2020.1
-rx==1.6.1
-singledispatch==3.4.0.3
-six==1.15.0
-sqlparse==0.3.1
-unidecode==1.1.1
+click==7.1.2
+flask-sqlalchemy==2.4.4
+flask==1.1.2
+itsdangerous==1.1.0
+jinja2==2.11.2
+markupsafe==1.1.1
+python-dotenv==0.14.0
+sqlalchemy==1.3.19
+werkzeug==1.0.1
